# train-energy-genetic-algorithm

./: CMakeLists.txt  README.md
data/: test.json
src/: davis.c  davis.h  eps.h  instance.c  instance.h  lookup.c  lookup.h  main.c  segment.c  segment.h  segment_evaluation.c  segment_evaluation.h  train.c  train.h
